--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,14 @@ os:
 
 # Enable all version channels
 rust:
-    - stable
-    - beta
+#   - stable
+#   - beta
     - nightly
 
 # Allow failures on Rust nightly
 matrix:
-    allow_failures:
-        - rust: nightly
+#   allow_failures:
+#       - rust: nightly
 
 # The build script
 script: |
